--- a/app/src/main/res/anim/jug_reset.xml
+++ b/app/src/main/res/anim/jug_reset.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</set>
+<rotate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fromDegrees="30"
+    android:toDegrees="0"
+    android:pivotX="85%"
+    android:pivotY="20%"
+    android:duration="600"
+    android:fillAfter="true"/>
