--- a/app/src/main/res/anim/jug_rotate.xml
+++ b/app/src/main/res/anim/jug_rotate.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</set>
+<rotate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fromDegrees="0"
+    android:toDegrees="30"
+    android:pivotX="85%"
+    android:pivotY="20%"
+    android:duration="1500"
+    android:fillAfter="true"/>
