--- a/app/src/main/res/anim/pulse_plant.xml
+++ b/app/src/main/res/anim/pulse_plant.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-  
+
+    <scale xmlns:android="http://schemas.android.com/apk/res/android"
+        android:fromXScale="1"
+        android:toXScale="1.05"
+        android:fromYScale="1"
+        android:toYScale="1.05"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:duration="1200"
+        android:repeatMode="reverse"
+        android:repeatCount="infinite"/>
+
 </set>
