--- a/app/src/main/res/drawable/bg_soft_blue.xml
+++ b/app/src/main/res/drawable/bg_soft_blue.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:startColor="#E3F2FD"
+        android:endColor="#E8F5E9"
+        android:angle="270"/>
+</shape>
