--- a/app/src/main/res/layout/activity_growth_loading.xml
+++ b/app/src/main/res/layout/activity_growth_loading.xml
@@ -1,10 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GrowthLoadingActivity">
+    android:background="@drawable/bg_soft_blue">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- JUG -->
+    <ImageView
+        android:id="@+id/imgJug"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="80dp"
+        android:translationX="-45dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_jug" />
+
+
+    <!-- WATER DROP (single reusable view) -->
+    <ImageView
+        android:id="@+id/imgDrop"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="160dp"
+        android:translationX="-5dp"
+        android:src="@drawable/ic_water_drops"
+        android:visibility="invisible" />
+
+
+    <!-- PLANT -->
+    <ImageView
+        android:id="@+id/imgPlant"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="120dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_plant" />
+
+
+    <!-- BUTTON -->
+    <Button
+        android:id="@+id/btnCheck"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:text="Wanna Check"
+        android:textAllCaps="false"
+        android:backgroundTint="#1E88E5"
+        android:textColor="@android:color/white"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="40dp"
+        android:visibility="gone"/>
+</FrameLayout>
