--- a/app/src/main/res/layout/activity_saved_projects.xml
+++ b/app/src/main/res/layout/activity_saved_projects.xml
@@ -18,22 +18,50 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Saved Projects"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"/>
+        <!-- ICON + TEXT BLOCK -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="73dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your generated LLD diagrams"
-            android:textSize="14sp"
-            android:textColor="#EEEEEE"
-            android:layout_marginTop="6dp"/>
+            <!-- BACK ICON -->
+            <ImageView
+                android:id="@+id/btnBack"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_back"
+                app:tint="@android:color/white" />
+
+            <!-- TEXT BLOCK (TITLE + SUBTITLE) -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Saved Projects"
+                    android:textColor="@android:color/white"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:text="Your generated LLD diagrams"
+                    android:textColor="#EEEEEE"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
+
+
 
     <!-- SAVED PROJECTS LIST -->
     <androidx.recyclerview.widget.RecyclerView
