--- a/app/src/main/res/drawable/bg_chat_bot.xml
+++ b/app/src/main/res/drawable/bg_chat_bot.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#E3F2FD"/>
+    <corners android:radius="16dp"/>
+    <padding
+        android:left="14dp"
+        android:top="10dp"
+        android:right="14dp"
+        android:bottom="10dp"/>
+</shape>
