--- a/app/src/main/res/drawable/bg_input_box.xml
+++ b/app/src/main/res/drawable/bg_input_box.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF"/>
+    <corners android:radius="18dp"/>
+    <stroke
+        android:width="1dp"
+        android:color="#DDDDDD"/>
+    <padding
+        android:left="14dp"
+        android:top="10dp"
+        android:right="14dp"
+        android:bottom="10dp"/>
+</shape>
